--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a{
 }
 
 .left{
-    padding-left: 115px;
+    padding-left: 110px;
 }
 
 .left .title{
@@ -62,9 +62,11 @@ a{
 .btn{
     color: white;
     background-color: #3882f6;
-    padding: 10px 20px;
+    padding: 15px 25px;
     border-radius: 7px;
     font-weight: bold;
+    border: none;
+
 }
 #image-one{
     margin-right: 30px;
@@ -102,14 +104,15 @@ a{
 .container .box{
     border: 3px solid #3882f6;
     height: 150px;
-    width: 100px;
-    border-radius: 20%;
+    width: 120px;
+    border-radius: 10%;
 }
 
 .product-image{
     width: 90px;
     height: 100px;
     margin-top: 30px;
+    margin-left: 7px;
 }
 .card-text{
     width: 100px;
@@ -136,4 +139,49 @@ a{
     text-align: right;
     margin-top: 20px;
     padding-right: 150px;
+}
+
+.fourth{
+    background-color: white;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.action{
+    background-color: #3882f6;
+    height: 120px;
+    width: 600px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #F9FAF8;
+}
+
+.message p{
+    font-size: 13px;
+}
+
+#btn-two{
+    background-color: #3882f6;
+    color: #F9FAF8;
+    padding: 9px 20px;
+    border: 3px solid #F9FAF8;
+    border-radius: 7px;
+    font-weight: bold;
+}
+
+.footer{
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer p{
+    color: #F9FAF8;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
