--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex: 1;
 }
 .logo{
     font-size: 24px;
@@ -135,7 +136,7 @@ a{
 
 #quote{
     padding-top: 130px;
-    padding-left: 250px;
+    padding-left: 290px;
     font-style: italic;
     font-size: 35px;
     font-weight: 300;
@@ -145,7 +146,7 @@ a{
 #author{
     text-align: right;
     margin-top: 10px;
-    padding-right: 400px;
+    padding-right: 350px;
     font-weight: bolder;
     font-size: x-large;
 }
@@ -198,4 +199,224 @@ a{
     color: #F9FAF8;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+/* Responsive Styles */
+
+@media (max-width: 1300px){
+    #quote{
+        padding-top: 120px;
+        padding-left: 200px;
+    }
+
+    #author{
+        text-align: right;
+        margin-top: 10px;
+        padding-right: 200px;
+    }
+
+    .logo{
+        padding-left: 95px;
+    }
+}
+@media (max-width: 1200px) {
+    #quote{
+        padding-top: 120px;
+        padding-left: 140px;
+    }
+
+    #author{
+        text-align: right;
+        margin-top: 10px;
+        padding-right: 200px;
+    }
+
+    #image-one{
+        margin-right: 10px;
+        margin-top: 10px;
+        width: 400px;
+        height: 400px;
+        margin-right: 30px;
+        padding-top: 50px;
+        align-self: flex-end;
+    }
+
+    .logo{
+        padding-left: 90px;
+    }
+
+    .nav-bar{
+        padding-right: 150px;
+    }
+
+    .action{
+        width: 800px;
+        border-radius: 10px;
+    }
+
+    .message h3{
+        font-size: 22px;
+    }
+    
+    .message p{
+        font-size: 17px;
+    }
+}
+
+@media (max-width: 1080px){
+    .hero{
+        background-color: #1f2937;
+        height: 470px;
+    }
+
+    .left{
+        padding-left: 40px;
+    }
+
+    .left .title{
+        font-size: 35px;
+    }
+    .left .sub-title{
+        margin: 15px 10px 10px 0px;
+        font-size: 17px;
+    }
+
+    .btn{
+        padding: 10px 40px;
+        margin-top: 5px;
+    }
+    #image-one{
+        width: 300px;
+        height: 330px;
+        margin-right: 40px;
+    }
+
+    .logo{
+        padding-left: 55px;
+    }
+
+    #quote{
+        padding-top: 110px;
+        font-size: 25px;
+    }
+
+    #author{
+        margin-top: 15px;
+        padding-right: 200px;
+        font-size: large;
+    }
+
+    .third{
+        height: 350px;
+    }
+
+    .second{
+        height: 430px;
+    }
+    
+    #sub-header{
+        font-size: 30px;
+    }
+    
+    .container{
+        gap: 35px;
+    }
+
+    .container .box{
+        height: 130px;
+        width: 130px;
+        border-radius: 10%;
+    }
+    
+    .product-image{
+        width: 90px;
+        height: 100px;
+        margin-top: 15px;
+        margin-left: 15px;
+    }
+    .card-text{
+        width: 130px;
+    }
+
+    .fourth{
+        height: 300px;
+    }
+    
+    .action{
+        height: 100px;
+        width: 700px;
+        border-radius: 7px;
+    }
+    
+    .message h3{
+        font-size: 18px;
+    }
+    
+    .message p{
+        font-size: 13px;
+    }
+    
+    #btn-two{
+        padding: 8px 30px;
+        border: 2px solid #F9FAF8;
+        border-radius: 7px;
+    }
+
+    .footer{
+        height: 80px;
+    }
+}
+
+@media (max-width: 800px){
+    .left{
+        padding-left: 30px;
+    }
+
+    .left .title{
+        font-size: 33px;
+    }
+    .left .sub-title{
+        margin: 15px 10px 10px 0px;
+        font-size: 15px;
+    }
+
+    .btn{
+        padding: 10px 40px;
+        margin-top: 5px;
+    }
+
+    #image-one{
+        width: 250px;
+        height: 300px;
+        margin-right: 30px;
+    }
+
+    .logo{
+        padding-left: 40px;
+    }
+
+    #quote{
+        padding-top: 110px;
+        font-size: 23px;
+        padding-left: 85px;
+    }
+
+    #author{
+        margin-top: 15px;
+        padding-right: 150px;
+        font-size: large;
+    }
+
+    .action{
+        width: 600px;
+        border-radius: 10px;
+    }
+
+    .message h3{
+        font-size: 17px;
+    }
+    
+    .message p{
+        font-size: 13px;
+    }
 }
